# wolfram-expr-rs

./: .gitignore  Cargo.toml  README.md  mod.rs  symbol.rs
docs/: CHANGELOG.md
src/: chrono_interop.rs  conversion.rs  error.rs  lib.rs  num_complex_interop.rs  ptr_cmp.rs  serde_impl.rs  symbol.rs  symbol_table.rs  tests.rs  wxf.rs
src/number/: mod.rs
src/serde_support/: de.rs  mod.rs  ser.rs
src/symbol/: interner.rs  mod.rs  parse.rs
src/wxf/: mod.rs
tests/: main.rs  wxf_proptest.rs
