[package]
name = "wolfram-expr"
version = "0.1.3"
authors = ["Connor Gray <code@connorgray.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/WolframResearch/wolfram-expr-rs"
description = "Efficient and ergonomic representation of Wolfram expressions in Rust"
keywords = ["wolfram", "wolfram-language", "mathematica", "wolfram-engine", "expression"]
categories = ["encoding"]

[features]
default = []

# Whether to publically export nom functions for parsing symbols. This feature should not
# be considered stable -- it is included only so that wl-parse can build higher-level
# expression parsing on top of it.
unstable_parse = []

[dependencies]
ordered-float = "3.4.0"
